MCDocumentRule/.antlr/mcdocParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from d:/C#Project/MinecraftLanguageServer/MCDocumentRule/mcdocParser.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class mcdocParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		WS=1, TripleDot=2, DoubleDot=3, DoubleColon=4, SquareBrackets=5, RoundBrackets=6, 
		CurlyBrackets=7, AngleBrackets=8, ResourceLocation=9, ColonMark=10, Comma=11, 
		Dot=12, At=13, QuestionMark=14, Plus=15, Equal=16, Sharp=17, Remainder=18, 
		LeftSquareBracket=19, RightSquareBracket=20, LeftRoundBracket=21, RightRoundBracket=22, 
		LeftCurlyBracket=23, RightCurlyBracket=24, LeftAngleBracket=25, RightAngleBracket=26, 
		LogicalOR=27, As=28, TypeKey=29, StructKeyType=30, Inject=31, Enum=32, 
		Use=33, To=34, Dispatch=35, RemainderFallback=36, RemainderNone=37, RemainderUnknown=38, 
		RemainderParent=39, RemainderKey=40, Any=41, BoolValue=42, ByteKeyType=43, 
		IntKeyType=44, LongKeyType=45, StringKeyType=46, BooleanKeyType=47, ShortKeyType=48, 
		FloatKeyType=49, DoubleKeyType=50, IntTypedUnit=51, FloatTypedUnit=52, 
		Identifier=53, DocCommentary=54, Commentary=55, DoubleQuotes=56, Int=57, 
		Float=58, PositiveInteger=59, String=60, PathSegment=61, Path=62;
	public const int
		RULE_logicalOR = 0, RULE_path = 1, RULE_resourceLocation = 2, RULE_at = 3, 
		RULE_as = 4, RULE_dot = 5, RULE_baseDataType = 6, RULE_keywordType = 7, 
		RULE_questionMark = 8, RULE_typeKey = 9, RULE_structKeyType = 10, RULE_inject = 11, 
		RULE_enum = 12, RULE_use = 13, RULE_dispatch = 14, RULE_doubleDot = 15, 
		RULE_tripleDot = 16, RULE_integer = 17, RULE_float = 18, RULE_string = 19, 
		RULE_integerRange = 20, RULE_floatRange = 21, RULE_identifier = 22, RULE_boolValue = 23, 
		RULE_commentary = 24, RULE_docCommentary = 25, RULE_typedNumber = 26, 
		RULE_stringType = 27, RULE_literalType = 28, RULE_numericType = 29, RULE_primitiveArrayType = 30, 
		RULE_listType = 31, RULE_tupleType = 32, RULE_enumMemberType = 33, RULE_enumValue = 34, 
		RULE_enumField = 35, RULE_enumBlock = 36, RULE_enumType = 37, RULE_prelim = 38, 
		RULE_referenceType = 39, RULE_dispatcherType = 40, RULE_unionType = 41, 
		RULE_staticIndexKey = 42, RULE_accessor = 43, RULE_accessorKey = 44, RULE_dynamicIndex = 45, 
		RULE_index = 46, RULE_indexBody = 47, RULE_indexingOnAType = 48, RULE_typeArgBlock = 49, 
		RULE_unAttributedType = 50, RULE_typeSentence = 51, RULE_positionalValues = 52, 
		RULE_namedValue = 53, RULE_namedValues = 54, RULE_treeBody = 55, RULE_treeValue = 56, 
		RULE_value = 57, RULE_attribute = 58, RULE_dispatchStatement = 59, RULE_structInjection = 60, 
		RULE_enumInjection = 61, RULE_injection = 62, RULE_useStatement = 63, 
		RULE_typeParam = 64, RULE_typeParamBlock = 65, RULE_typeAlias = 66, RULE_structKey = 67, 
		RULE_structField = 68, RULE_structBlock = 69, RULE_struct = 70, RULE_file = 71;
	public static readonly string[] ruleNames = {
		"logicalOR", "path", "resourceLocation", "at", "as", "dot", "baseDataType", 
		"keywordType", "questionMark", "typeKey", "structKeyType", "inject", "enum", 
		"use", "dispatch", "doubleDot", "tripleDot", "integer", "float", "string", 
		"integerRange", "floatRange", "identifier", "boolValue", "commentary", 
		"docCommentary", "typedNumber", "stringType", "literalType", "numericType", 
		"primitiveArrayType", "listType", "tupleType", "enumMemberType", "enumValue", 
		"enumField", "enumBlock", "enumType", "prelim", "referenceType", "dispatcherType", 
		"unionType", "staticIndexKey", "accessor", "accessorKey", "dynamicIndex", 
		"index", "indexBody", "indexingOnAType", "typeArgBlock", "unAttributedType", 
		"typeSentence", "positionalValues", "namedValue", "namedValues", "treeBody", 
		"treeValue", "value", "attribute", "dispatchStatement", "structInjection", 
		"enumInjection", "injection", "useStatement", "typeParam", "typeParamBlock", 
		"typeAlias", "structKey", "structField", "structBlock", "struct", "file"
	};

	private static readonly string[] _LiteralNames = {
		null, null, "'...'", "'..'", "'::'", "'[]'", "'()'", "'{}'", "'<>'", null, 
		"':'", "','", "'.'", "'@'", "'?'", "'+'", "'='", "'#'", "'%'", "'['", 
		"']'", "'('", "')'", "'{'", "'}'", "'<'", "'>'", "'|'", "'as'", "'type '", 
		"'struct'", "'inject'", "'enum'", "'use'", "'to'", "'dispatch'", "'%fallback'", 
		"'%none'", "'%unknown'", "'%parent'", "'%key'", "'any'", null, "'byte'", 
		"'int'", "'long'", "'string'", "'boolean'", "'short'", "'float'", "'double'", 
		null, null, null, null, null, "'\"'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "WS", "TripleDot", "DoubleDot", "DoubleColon", "SquareBrackets", 
		"RoundBrackets", "CurlyBrackets", "AngleBrackets", "ResourceLocation", 
		"ColonMark", "Comma", "Dot", "At", "QuestionMark", "Plus", "Equal", "Sharp", 
		"Remainder", "LeftSquareBracket", "RightSquareBracket", "LeftRoundBracket", 
		"RightRoundBracket", "LeftCurlyBracket", "RightCurlyBracket", "LeftAngleBracket", 
		"RightAngleBracket", "LogicalOR", "As", "TypeKey", "StructKeyType", "Inject", 
		"Enum", "Use", "To", "Dispatch", "RemainderFallback", "RemainderNone", 
		"RemainderUnknown", "RemainderParent", "RemainderKey", "Any", "BoolValue", 
		"ByteKeyType", "IntKeyType", "LongKeyType", "StringKeyType", "BooleanKeyType", 
		"ShortKeyType", "FloatKeyType", "DoubleKeyType", "IntTypedUnit", "FloatTypedUnit", 
		"Identifier", "DocCommentary", "Commentary", "DoubleQuotes", "Int", "Float", 
		"PositiveInteger", "String", "PathSegment", "Path"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "mcdocParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static mcdocParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public mcdocParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public mcdocParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class LogicalORContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LogicalOR() { return GetToken(mcdocParser.LogicalOR, 0); }
		public LogicalORContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_logicalOR; } }
	}

	[RuleVersion(0)]
	public LogicalORContext logicalOR() {
		LogicalORContext _localctx = new LogicalORContext(Context, State);
		EnterRule(_localctx, 0, RULE_logicalOR);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 144;
			Match(LogicalOR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PathContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Path() { return GetToken(mcdocParser.Path, 0); }
		public PathContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_path; } }
	}

	[RuleVersion(0)]
	public PathContext path() {
		PathContext _localctx = new PathContext(Context, State);
		EnterRule(_localctx, 2, RULE_path);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 146;
			Match(Path);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ResourceLocationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ResourceLocation() { return GetToken(mcdocParser.ResourceLocation, 0); }
		public ResourceLocationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_resourceLocation; } }
	}

	[RuleVersion(0)]
	public ResourceLocationContext resourceLocation() {
		ResourceLocationContext _localctx = new ResourceLocationContext(Context, State);
		EnterRule(_localctx, 4, RULE_resourceLocation);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 148;
			Match(ResourceLocation);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AtContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode At() { return GetToken(mcdocParser.At, 0); }
		public AtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_at; } }
	}

	[RuleVersion(0)]
	public AtContext at() {
		AtContext _localctx = new AtContext(Context, State);
		EnterRule(_localctx, 6, RULE_at);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 150;
			Match(At);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode As() { return GetToken(mcdocParser.As, 0); }
		public AsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_as; } }
	}

	[RuleVersion(0)]
	public AsContext @as() {
		AsContext _localctx = new AsContext(Context, State);
		EnterRule(_localctx, 8, RULE_as);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 152;
			Match(As);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DotContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Dot() { return GetToken(mcdocParser.Dot, 0); }
		public DotContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dot; } }
	}

	[RuleVersion(0)]
	public DotContext dot() {
		DotContext _localctx = new DotContext(Context, State);
		EnterRule(_localctx, 10, RULE_dot);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 154;
			Match(Dot);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BaseDataTypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode StringKeyType() { return GetToken(mcdocParser.StringKeyType, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BooleanKeyType() { return GetToken(mcdocParser.BooleanKeyType, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ByteKeyType() { return GetToken(mcdocParser.ByteKeyType, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ShortKeyType() { return GetToken(mcdocParser.ShortKeyType, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IntKeyType() { return GetToken(mcdocParser.IntKeyType, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FloatKeyType() { return GetToken(mcdocParser.FloatKeyType, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DoubleKeyType() { return GetToken(mcdocParser.DoubleKeyType, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LongKeyType() { return GetToken(mcdocParser.LongKeyType, 0); }
		public BaseDataTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_baseDataType; } }
	}

	[RuleVersion(0)]
	public BaseDataTypeContext baseDataType() {
		BaseDataTypeContext _localctx = new BaseDataTypeContext(Context, State);
		EnterRule(_localctx, 12, RULE_baseDataType);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 156;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 2243003720663040L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class KeywordTypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Any() { return GetToken(mcdocParser.Any, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BoolValue() { return GetToken(mcdocParser.BoolValue, 0); }
		public KeywordTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_keywordType; } }
	}

	[RuleVersion(0)]
	public KeywordTypeContext keywordType() {
		KeywordTypeContext _localctx = new KeywordTypeContext(Context, State);
		EnterRule(_localctx, 14, RULE_keywordType);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 158;
			_la = TokenStream.LA(1);
			if ( !(_la==Any || _la==BoolValue) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class QuestionMarkContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode QuestionMark() { return GetToken(mcdocParser.QuestionMark, 0); }
		public QuestionMarkContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_questionMark; } }
	}

	[RuleVersion(0)]
	public QuestionMarkContext questionMark() {
		QuestionMarkContext _localctx = new QuestionMarkContext(Context, State);
		EnterRule(_localctx, 16, RULE_questionMark);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 160;
			Match(QuestionMark);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeKeyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TypeKey() { return GetToken(mcdocParser.TypeKey, 0); }
		public TypeKeyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeKey; } }
	}

	[RuleVersion(0)]
	public TypeKeyContext typeKey() {
		TypeKeyContext _localctx = new TypeKeyContext(Context, State);
		EnterRule(_localctx, 18, RULE_typeKey);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 162;
			Match(TypeKey);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StructKeyTypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode StructKeyType() { return GetToken(mcdocParser.StructKeyType, 0); }
		public StructKeyTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_structKeyType; } }
	}

	[RuleVersion(0)]
	public StructKeyTypeContext structKeyType() {
		StructKeyTypeContext _localctx = new StructKeyTypeContext(Context, State);
		EnterRule(_localctx, 20, RULE_structKeyType);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 164;
			Match(StructKeyType);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InjectContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Inject() { return GetToken(mcdocParser.Inject, 0); }
		public InjectContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_inject; } }
	}

	[RuleVersion(0)]
	public InjectContext inject() {
		InjectContext _localctx = new InjectContext(Context, State);
		EnterRule(_localctx, 22, RULE_inject);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 166;
			Match(Inject);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EnumContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Enum() { return GetToken(mcdocParser.Enum, 0); }
		public EnumContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_enum; } }
	}

	[RuleVersion(0)]
	public EnumContext @enum() {
		EnumContext _localctx = new EnumContext(Context, State);
		EnterRule(_localctx, 24, RULE_enum);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 168;
			Match(Enum);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UseContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Use() { return GetToken(mcdocParser.Use, 0); }
		public UseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_use; } }
	}

	[RuleVersion(0)]
	public UseContext use() {
		UseContext _localctx = new UseContext(Context, State);
		EnterRule(_localctx, 26, RULE_use);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 170;
			Match(Use);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DispatchContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Dispatch() { return GetToken(mcdocParser.Dispatch, 0); }
		public DispatchContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dispatch; } }
	}

	[RuleVersion(0)]
	public DispatchContext dispatch() {
		DispatchContext _localctx = new DispatchContext(Context, State);
		EnterRule(_localctx, 28, RULE_dispatch);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 172;
			Match(Dispatch);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DoubleDotContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DoubleDot() { return GetToken(mcdocParser.DoubleDot, 0); }
		public DoubleDotContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_doubleDot; } }
	}

	[RuleVersion(0)]
	public DoubleDotContext doubleDot() {
		DoubleDotContext _localctx = new DoubleDotContext(Context, State);
		EnterRule(_localctx, 30, RULE_doubleDot);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 174;
			Match(DoubleDot);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TripleDotContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TripleDot() { return GetToken(mcdocParser.TripleDot, 0); }
		public TripleDotContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tripleDot; } }
	}

	[RuleVersion(0)]
	public TripleDotContext tripleDot() {
		TripleDotContext _localctx = new TripleDotContext(Context, State);
		EnterRule(_localctx, 32, RULE_tripleDot);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 176;
			Match(TripleDot);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IntegerContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Int() { return GetToken(mcdocParser.Int, 0); }
		public IntegerContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_integer; } }
	}

	[RuleVersion(0)]
	public IntegerContext integer() {
		IntegerContext _localctx = new IntegerContext(Context, State);
		EnterRule(_localctx, 34, RULE_integer);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 178;
			Match(Int);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FloatContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Float() { return GetToken(mcdocParser.Float, 0); }
		public FloatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_float; } }
	}

	[RuleVersion(0)]
	public FloatContext @float() {
		FloatContext _localctx = new FloatContext(Context, State);
		EnterRule(_localctx, 36, RULE_float);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 180;
			Match(Float);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StringContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode String() { return GetToken(mcdocParser.String, 0); }
		public StringContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_string; } }
	}

	[RuleVersion(0)]
	public StringContext @string() {
		StringContext _localctx = new StringContext(Context, State);
		EnterRule(_localctx, 38, RULE_string);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 182;
			Match(String);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
